# SFMLGame

./: .gitignore  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Definitions.hpp  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.h  GameEntity.hpp  GameState.cpp  GameState.hpp  GameTile.cpp  GameTile.h  GameWorld.cpp  GameWorld.h  InputManager.cpp  InputManager.hpp  MainMenuState.cpp  MainMenuState.hpp  Makefile  Player.cpp  Player.h  Player.hpp  README.md  SplashState.cpp  SplashState.hpp  StateMachine.cpp  StateMachine.hpp  Tile.cpp  World.cpp  World.hpp  main.cpp
Components/: MovementComponent.cpp
Entities/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp
Map/: Tile.cpp  Tile.hpp  World.cpp  World.hpp
States/: Button.cpp  Button.hpp  ExitButton.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  PlayButton.cpp  PlayButton.hpp  SplashState.cpp  SplashState.hpp  State.hpp
res/: settings.txt
src/: AssetManager.cpp  AssetManager.h  Definitions.h  Definitions.hpp  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h  Init.cpp  Init.h  InputManager.cpp  InputManager.h  InputManager.hpp  main.cpp  mgr.h
src/Components/: MovementComponent.cpp  MovementComponent.h  MovementComponent.hpp
src/Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/Map/: Map.cpp  Map.h  Tile.cpp  Tile.h  World.cpp  World.h  World.hpp
src/States/: Button.cpp  Button.h  Button.hpp  ExitButton.cpp  ExitButton.h  GameState.cpp  GameState.h  GameState.hpp  MainMenuState.cpp  MainMenuState.h  PlayButton.cpp  PlayButton.h  SplashState.cpp  SplashState.h  State.h  StateMachine.cpp  StateMachine.h  StateManager.cpp  StateManager.h
test/: CMakeLists.txt  GameTest.cpp
