cmake_minimum_required(VERSION 3.18)
project(SFMLGame)
set(CMAKE_CXX_STANDARD 17)
set(SFML_STATIC_LIBRARIES TRUE)
set(SOURCE_FILES src/main.cpp src/Map/Tile.cpp src/Map/Tile.h src/Map/World.cpp src/Map/World.h src/Entities/Entity.h src/Entities/Player.cpp src/Entities/Player.h src/Entities/Entity.cpp src/States/State.h src/States/StateMachine.cpp src/States/StateMachine.h src/AssetManager.cpp src/AssetManager.h src/InputManager.cpp src/InputManager.h src/Game.cpp src/Game.h src/Definitions.h src/States/SplashState.cpp src/States/SplashState.h src/States/MainMenuState.cpp src/States/MainMenuState.h src/States/GameState.cpp src/States/GameState.h src/States/Button.cpp src/States/Button.h src/States/PlayButton.cpp src/States/PlayButton.h src/States/ExitButton.cpp src/States/ExitButton.h src/Components/MovementComponent.cpp src/Components/MovementComponent.h)
add_executable(SFMLGame ${SOURCE_FILES})

if(WIN32)
    set(SFML_DIR C:/SFML/lib/cmake/SFML)
else()
    set(SFML_DIR /usr/lib/x86_64-linux-gnu/cmake/SFML)
endif ()

find_package(SFML COMPONENTS graphics REQUIRED)
if(SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    set(CMAKE_EXE_LINKER_FLAGS " -static")
    target_link_libraries(SFMLGame sfml-graphics)
endif()